# alphabot

./: .env.example  .env.production  .eslintrc.js  .gitignore  Anchor.toml  CLOUD9_DEPLOYMENT_GUIDE.md  CLOUDSHELL_DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUCCESS.md  Dockerfile  Dockerfile.api  Dockerfile.cached  Dockerfile.https  Dockerfile.optimized  Dockerfile.production  EXACT_24_ISSUES_AND_SOLUTIONS.md  ISSUES_RESOLVED.md  PROJECT_COMPLETION_SUMMARY.md  README.md  SECURE_DEPLOYMENT_GUIDE.md  WSL_DEPLOYMENT_STEPS.md  alpha-pack-cached-task-definition.json  alpha-pack-complete-task-definition.json  alpha-pack-complete-ubuntu.json  alpha-pack-full-deployment.json  alpha-pack-https-task.json  alpha-pack-instant.json  alpha-pack-miniapp.json  alpha-pack-optimized.json  alpha-pack-pro-deployment.json  alpha-pack-pro-task-definition.json  alpha-pack-pro-v2-task-definition.json  alpha-pack-pro-v3-task-definition.json  alpha-pack-ssl-proxy-task.json  app.js  apprunner-final-config.json  apprunner-service.json  apprunner.yaml  (+65 more)
.github/workflows/: deploy-alpha-pack.yml
frontend/: Dockerfile  next.config.js  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/hooks/: useTelegramWebApp.ts
infrastructure/: app.ts
infrastructure/stacks/: application-stack.ts  infrastructure-stack.ts  ml-stack.ts  security-stack.ts  solana-stack.ts
monitoring/: prometheus.yml
programs/alpha-pack-core/: Cargo.toml
programs/arbitrage-executor/: Cargo.toml
programs/competition-engine/: Cargo.toml
programs/competition-engine/src/: lib.rs
programs/cross-chain-bridge/: Cargo.toml
programs/cross-chain-bridge/src/: lib.rs
programs/pack-manager/: Cargo.toml
programs/social-rewards/: Cargo.toml
programs/social-rewards/src/: lib.rs
public/: index.html
routes/: miniapp.js
scripts/: deploy.sh  fix-issues.sh  setup-free-ai.sh  test.sh
services/: arbitrage-detector.js  coingecko-api.js  defi-protocols.js  ml-service.js  solana-service.js  trading-signals.js  user-service.js
src/: App.js  index.js
src/ai/: free-alternatives.ts
src/api/: server.ts
src/components/: Navigation.js
src/hooks/: useAuth.js  useTelegram.js
src/middleware/: security.ts
src/pages/: Dashboard.js  Leaderboard.js  Packs.js  Profile.js  Trading.js
src/social/: engine.ts
tests/: setup.ts
types/: aws-lambda.d.ts  aws-sdk.d.ts  solana.d.ts  utilities.d.ts
(+19 files in other folders)
